# iga

./: .buildinfo  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlint  .markdownlint.json  .yamllint.yml  CHANGES.md  CITATION-TEMPLATE.cff  CITATION.cff  CONTRIBUTING.md  INSTALL-Python3.md  LICENSE  Makefile  README.md  RELEASE.md  SUPPORT.md  action.yml  appendix-metadata.html  appendix.html  cli-usage.html  codemeta-TEMPLATE.json  codemeta.json  colophon.html  genindex.html  gha-usage.html  glossary.html  index.html  installation.html  introduction.html  metadata.html  objects.inv  quick-start.html  requirements-dev.txt  requirements-lint.txt  requirements.txt  sample-workflow.yml  search.html  searchindex.js  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  rename_project.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: archive-github-pages.yml  build-sphinx.yml  doc-builder.yml  iga.yml  ignored-urls.txt  markdown-link-tester.yml  markdown-linter.yml  pypi-publish.yaml  python-linter.yml  readme-accessibility-checker.yml  rename_project.yml  waystation.yml
_sources/: appendix-metadata.md.txt  appendix.md.txt  cli-usage.md.txt  gha-usage.md.txt  glossary.md.txt  index.md.txt  installation.md.txt  introduction.md.txt  quick-start.md.txt  tips.md.txt
_static/css/: custom.css
dev/: 1000-top-github-contributors.txt  common-words-also-names.txt  inveniordm-field-mapping.numbers  reference-codemeta-crosswalk.numbers
dev/codemeta/: README.md
dev/experiments/: graphql-test.py
dev/experiments/comparison-name-taggers/: bert1.py  bert2.py  bert3.py  h.py  n.py
dev/org-names/: github-orgs.txt
dev/person-names/: README.md  chinese-surnames.txt  japanese-surnames.txt  korean-surnames.txt
dev/scripts/: create-licenses-file  download-sample-repo  filter-github-orgs  get-github  list-github-orgs  list-orgs-in-github
dev/validation/: README.md
dev/vocabularies/: README.md  relations.txt
docs/: Makefile  appendix-metadata.md  cli-usage.md  colophon.md  conf.py  gha-usage.md  glossary.md  index.md  installation.md  introduction.md  metadata.md  notes.txt  quick-start.md  tips.md
iga/: __init__.py  __main__.py  cli.py  data_utils.py  doi.py  exceptions.py  exit_codes.py  github.py  githublab.py  gitlab.py  id_utils.py  invenio.py  json_utils.py  licenses.py  markdown_utils.py  metadata.py  name_utils.py  orcid.py  record.py  reference.py  reference_utils.py  ror.py  text_utils.py
iga/data/: known-companies.txt  known-organizations.txt  make-pickle  make-pickle-orgs  make-pickle-surnames  org-names.txt  surnames.p  surnames.txt
project_name/: __init__.py  __main__.py
tests/: conftest.py  test_cli.py  test_data_utils.py  test_doi.py  test_exceptions.py  test_exit_codes.py  test_github.py  test_github_mocks.py  test_gitlab.py  test_gitlab_mocks.py  test_id_utils.py  test_init.py  test_is_person.py  test_licenses.py  test_name_parsing.py  test_name_splitting.py  test_name_utils.py  test_orcid.py  test_record_from_codemeta.py  test_reference.py  test_reference_utils.py  test_ror.py  test_text_utils.py
(+205 files in other folders)
