# Summary: IGA package metadata and PyPI configuration.
#
# Copyright 2024 California Institute of Technology.
# License: Modified BSD 3-clause – see file "LICENSE" in the project website.
# Website: https://github.com/caltechlibrary/iga

[metadata]
name          = iga
version       = 1.3.0
description   = The InvenioRDM GitHub Archiver (IGA) automatically archives GitHub releases in an InvenioRDM repository.
author        = Michael Hucka
author_email  = mhucka@caltech.edu
license       = https://github.com/caltechlibrary/iga/blob/main/LICENSE
license_files = LICENSE
url           = https://github.com/caltechlibrary/iga
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/iga
  Bug Tracker = https://github.com/caltechlibrary/iga/issues
keywords      = Python, applications
classifiers   =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Environment :: No Input/Output (Daemon)
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.9

[options.entry_points]
console_scripts = 
  iga = iga.__main__:console_scripts_main

[tool:pytest]
pythonpath = .
testpaths = tests iga
addopts = --cov=iga
